assets/css/moegi.css
html {
    font-size: 10px;
}

body {
    font-family: "source-han-serif-sc", serif;
    font-size: 1.6rem;
    font-weight: 200;
    height: 100%;
    max-height: 100%;
    letter-spacing: 0.01rem;
    color: #3a4145;
    -webkit-font-feature-settings: 'kern' 1;
    -moz-font-feature-settings: 'kern' 1;
    -o-font-feature-settings: 'kern' 1;
    text-rendering: geometricPrecision;
    background-color: #fbfbfb;
}

a {
    font-weight: 400;
    transition: all 0.3s ease;
    text-decoration: none;
    color: #4a4a4a;
}

a:hover {
    /*padding-bottom: 3px;*/
    color: #86B81B;
    /*border-bottom: 1px solid #3a4145;*/
}

.content {
    margin-top: 4rem;
}


/* HEADER */

.blog-title {
    font-size: 3.5rem;
    margin-top: 4rem;
}

.nav ul {
    display: block;
    margin: 20px 0;
    list-style: none;
    padding: 0;
}

.nav li {
    margin: 0 4px;
    display: inline-block;
}

.nav-current {
    padding-bottom: 3px;
    border-bottom: 1px solid #3a4145;
}


/* POST */

.post-header {
    margin-bottom: 1rem;
}

.post-excerpt {
    color: #999999;
}

.post-meta {
    display: block;
    font-size: 1.3rem;
    line-height: 2.2rem;
    color: #9EABB3;
}

.post-meta a {
    font-weight: 400;
    transition: all 0.3s ease;
    text-decoration: none;
    color: #9EABB3;
}

.post-meta a:hover {
    color: #86B81B;
}

article {
    margin: 2.4rem 0;
}

.post {
    position: relative;
    max-width: 710px;
    margin: 2rem auto;
    padding-bottom: 2rem;
    border-bottom: #EBF2F6 1px solid;
    word-wrap: break-word;
}

.post:after {
    display: block;
    content: "";
    width: 7px;
    height: 7px;
    border: #E7EEF2 1px solid;
    position: absolute;
    bottom: -5px;
    left: 50%;
    margin-left: -5px;
    background: #fbfbfb;
    border-radius: 100%;
    box-shadow: #eee 0 0 0 5px;
}

.tags {
    margin-left: 0.6rem;
}

.tags a {
    position: relative;
    padding: 0.1rem 0.6rem;
    margin-right: 0.5rem;
    background: #f0f0f0;
    border-radius: 0.24rem;
}

.tags a:hover {
    background: rgba(134, 184, 27, 0.6);
    color: #fff;
}

.tags a::before {
    content: "#"
}



/* FOOTER */

.blog-footer {
    margin-top: 4rem;
    margin-right: auto;
    margin-left: auto;
    text-align: center;
}

.blog-footer p {
    display: block;
    font-size: 1.1rem;
    color: #9EABB3;
    line-height: 0.5;
}

.blog-footer a {
    color: #9EABB3;
}

.blog-footer a:hover {
    color: #86B81B;
    background: rgba(134, 184, 27, 0.1);
}



/* GO TO TOP */

.go-to-top {
    background-image: url("../images/go-to-top.png");
    width: 30px;
    height: 30px;
    position: fixed;
    bottom: 30px;
    left: 50%;
    -webkit-transform: translateX(400px);
    -moz-transform: translateX(400px);
    transform: translateX(400px);
    border: none;
    display: none;
    opacity: 0.3;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s
}

.go-to-top:hover {
    opacity: 1
}



/* POSITIONING */

.left {
    text-align: left;
}

.right {
    text-align: right;
}

.center {
    margin-right: auto;
    margin-left: auto;
    text-align: center;
}

.justify {
    text-align: justify;
}





/* TYPOGRAPHY */

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: inherit;
    font-weight: 400;
    color: #2e2e2e;
    -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
    -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
    -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
    text-rendering: geometricPrecision;
    margin: 1rem 0;
}

h1 {
    font-size: 3.2rem;
    text-indent: -3px;
    letter-spacing: -2px;
}

h2 {
    font-size: 2.5rem;
    letter-spacing: -1px;
}

h3 {
    font-size: 2.4rem;
    letter-spacing: -0.6px;
}

h4 {
    font-size: 2rem;
}

h5 {
    font-size: 1.8rem;
}

h6 {
    font-size: 1.5rem;
}

p {
    margin: 1rem 0;
    line-height: 1.8;
}

.container {
    width: 90%;
    margin-right: auto;
    margin-left: auto;
}

@media only screen and (min-width: 540px) {
    html {
        font-size: 6px;
    }
    .container {
        width: 80%;
    }
}

@media only screen and (min-width: 960px) {
    html {
        font-size: 10px;
    }
    .container {
        width: 75%;
        max-width: 60rem;
    }
}

